--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,5 +16,9 @@ services:
     App\:
         resource: '../src/'
 
+    App\Security\SupabaseJwtAuthenticator:
+        arguments:
+            $jwksUrl: '%env(SUPABASE_JWKS_URL)%'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
