--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "description": "",
     "dependencies": {
         "@hotwired/turbo": "^8.0.18",
+        "@supabase/supabase-js": "^2.76.1",
         "@symfony/ux-turbo": "^2.30.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
